# ASSISTANT

./: .gitignore  =1.2.0  README.md  changes.md  download_model.py  flow.ipynb.bak  phase3.md  phase4_plan.md  phase5_plan.md  pyproject.toml  requirements.txt  testing.py
.github/workflows/: safe-smoke.yml
data/: retrieval_log.jsonl
src/: app.py  function_executor.py  main.py  router.py  scheduler_windows.py
src/audio_input/: asr.py
src/audio_output/: KokoroTTS.py  QwenTTS.py  kittentts.py  tts.py
src/graph/: agent.py
src/interfaces/: telegram_bot.py
src/managers/: __init__.py  alarm_manager.py  calendar_manager.py  habit_manager.py  news_manager.py  task_manager.py  timer_manager.py  weather_manager.py
src/memory/: __init__.py  long_term_memory.py
src/services/: __init__.py  email_service.py  send_reminder.py
src/test/: kittytts.py
src/tools/: decision_router.py  intent_router.py  pre_filter.py  spotify.py  test_search.py  tool_group.py  tool_retriever.py  tool_router.py  tools_by_category.py  web_search.py  wrapped_tools.py
src/tools/google/: auth.py  calendar_tools.py  gmail_tools.py  tasks_tools.py
src/tools/pc_automation/: __init__.py  app_launcher.py  mouse_keyboard.py  screenshot.py  system_controls.py  (+1 more)
src/utils/: config.py
src/vision/: __init__.py  screen_vision.py
tests/: __init__.py  conftest.py  mail.py  run_tests.py  test_fixes.py  test_integration.py  test_long_term_memory.py  test_managers.py  test_open_app.py  test_phase2_memory.py  test_phase4_fixes.py  test_safe_smoke.py  test_tool_retriever.py  test_tools.py
