[project]
name = "assistant"
version = "0.1.0"
description = "Tsuzi, a local-first Windows desktop assistant with memory, Telegram control, PC automation, and screen vision."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
  { name = "Tsuzi contributors" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "safe_smoke: deterministic smoke tests safe for CI",
  "side_effect: tests that may mutate desktop, network, credentials, or local state",
  "core: Core tools tests",
  "pc_control: PC control tests",
  "file_ops: File operation tests",
  "research: Research tool tests",
  "habits: Habit tracking tests",
  "email: Email tests",
  "integration: Integration tests",
  "requires_network: Tests that need internet",
  "requires_gmail: Tests that need Gmail credentials",
]
